--- a/references.bib
+++ b/references.bib
@@ -69,3 +69,18 @@
   year={2018},
   publisher={CRC Press}
 }
+
+@Article{Brennan2010Generalizabilitytheoryclassical,
+  author    = {Brennan, Robert L.},
+  journal   = {Applied Measurement in Education},
+  title     = {Generalizability theory and classical test theory},
+  year      = {2010},
+  month     = {dec},
+  number    = {1},
+  pages     = {1--21},
+  volume    = {24},
+  doi       = {10.1080/08957347.2011.532417},
+  file      = {:/Users/wmm0017/Dropbox/References/Files/2010/Brennan2010Generalizabilitytheoryclassical.pdf:PDF},
+  owner     = {wmmurrah},
+  publisher = {Informa {UK} Limited},
+}
