Update efa sectio to HEMP example

--- a/references.bib
+++ b/references.bib
@@ -84,3 +84,30 @@
   owner     = {wmmurrah},
   publisher = {Informa {UK} Limited},
 }
+
+@book{Kline2016Principlespracticestructural,
+	title = {Principles and practice of structural equation modeling},
+	author = {Kline, Rex B.},
+	year = {2016},
+	date = {2016},
+	publisher = {Guilford publications},
+	url = {https://www.guilford.com/books/Principles-and-Practice-of-Structural-Equation-Modeling/Rex-Kline/9781462523344},
+	note = {Citation Key: Kline2016Principlespracticestructural
+tex.owner: wmmurrah
+tex.readstatus: read}
+}
+
+@Article{Preacher2003RepairingTomSwifts,
+  author    = {Kristopher J. Preacher and Robert C. MacCallum},
+  journal   = {Understanding Statistics},
+  title     = {Repairing {Tom Swift{\textquotesingle}s }electric factor analysis machine},
+  year      = {2003},
+  month     = {feb},
+  number    = {1},
+  pages     = {13--43},
+  volume    = {2},
+  doi       = {10.1207/s15328031us0201_02},
+  file      = {:/Users/wmm0017/Dropbox/References/Files/2003/Preacher2003Repairingtomswifts.pdf:PDF},
+  owner     = {wmmurrah},
+  publisher = {Informa {UK} Limited},
+}
