--- a/references.bib
+++ b/references.bib
@@ -111,3 +111,10 @@ tex.readstatus: read}
   owner     = {wmmurrah},
   publisher = {Informa {UK} Limited},
 }
+
+@Article{baylor2011introduction,
+  title = {An introduction to item response theory and Rasch models for speech-language pathologists},
+  author = {Baylor, Carolyn and Hula, William and Donovan, Neila J and Doyle, Patrick J and Kendall, Diane and Yorkston, Kathryn},
+  year = {2011},
+  publisher = {ASHA}
+}
